# x402-paid-api-starter

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  discovery.py  ledger.py  main.py  payment.py  paywall.py  pricing.py  routes.py
docs/: DISCOVERY.md
scripts/: pay_example.py  peek.py
tests/: test_basic.py  test_payment.py
